# magent

./: AGENTS.md  Cargo.toml  README.md
.claude/projects/-home-marten-m-magent/memory/: MEMORY.md  feedback_generics.md
docs/: MVP.md  ROADMAP.md  STYLE.md  TODO.md  document-context.md  explicit-references.md  inline-editing.md  tool-result-caching.md  tool-use.md
docs/Adrs/: 001-mvp-architecture.md  002-custom-element-markers.md  003-incremental-response-writing.md  004-remove-magent-edit.md
docs/projects/: 001-mvp.md  002-document-context.md  003-inline-editing.md  004-explicit-references.md  005-tool-use.md  006-tool-result-caching.md  007-browser-tool.md  008-incremental-response-writing.md  009-file-operations.md  010-search-tool-fixes.md  011-edit-tool-tag-format.md  012-environment-context.md  013-web-search-tool.md  014-conditional-tool-flush.md
src/: context.rs  edit.rs  lib.rs  llm.rs  main.rs  parser.rs  tool.rs  tools.rs  watcher.rs  writer.rs
src/tools/: browser.rs  delete.rs  edit.rs  mv.rs  path.rs  read.rs  search.rs  write.rs
